# YiaLite

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  新建 文本文档.txt
cmake/: YiaLiteConfig.cmake.in
csrc/: yialite.cpp
csrc/audio/: audio_manager.h
csrc/core/: initialize.h  log.h
csrc/input/: input.h  scancode.h
csrc/math/: math.h
csrc/renderer/: renderer.h
include/c_yialite/: yialite.h
include/c_yialite/core/: context.h  initialize.h
include/c_yialite/devui/: devui.h
include/c_yialite/event/: event.h
include/c_yialite/math/: math.h
include/c_yialite/renderer/: renderer.h
include/c_yialite/window/: window.h
include/yialite/: yialite.h
include/yialite/audio/: audio_system.h
include/yialite/core/: config.h  context.h  core.h  initialize.h  log.h  yialite_exception.h
include/yialite/devui/: devui.h
include/yialite/event/: event.h  keycode.h  mouse_button.h
include/yialite/input/: input.h  scancode.h
include/yialite/math/: math.h
include/yialite/utils/: singleton.h
include/yialite/window/: window.h
licenses/vorbis/: LICENSE.txt
src/: CMakeLists.txt  lite.h  pch.h  yialite.h
src/audio/: audio_adapter.h  audio_manager.cpp  audio_manager.h  audio_system.cpp  audio_system.h  audio_types.h
src/backends/miniaudio/audio/: miniaudio_adapter.cpp  miniaudio_adapter.h
src/backends/sdl/event/: sdl_event_adapter.cpp  sdl_event_adapter.h
src/backends/sdl/window/: sdl_window.cpp  sdl_window.h
src/c_api/: yialite.cpp
src/c_api(discard)/: yialite.cpp
src/c_api(discard)/audio/: audio_manager.h
src/c_api(discard)/core/: log.h
src/c_api(discard)/event/: event.h  mouse_button.h
src/c_api(discard)/renderer/: renderer.h
src/c_api(discard)/window/: window.h
src/c_api/core/: context.h
src/c_api/devui/: devui.h
src/c_api/event/: keycode.h  mouse_button.h
src/c_api/input/: input.h  scancode.h
src/c_api/math/: math.h
src/c_api/renderer/: render_color.h
src/core/: config.h  context.cpp  context.h  core.h  error.h  flag_macros.h  initialize.cpp  initialize.h  lite_exception.h  log.cpp  log.h  logger.cpp  logger.h  result.h  result_export.cpp  result_export.h  yialite_exception.h
src/cpp_api/: yialite.h
src/cpp_api/audio/: audio_manager.cpp  audio_manager.h
src/cpp_api/core/: config.h  context.cpp  context.h  core.h  initialize.cpp  initialize.h  log.cpp  log.h  logger.cpp  logger.h
src/cpp_api/devui/: devui.cpp  devui.h
src/cpp_api/devui/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp
src/cpp_api/devui/imgui/backends/: imgui_impl_sdl3.h
src/cpp_api/event/: event.cpp  event.h  mouse_button.h
src/cpp_api/input/: input.h  scancode.h
src/cpp_api/math/: math.h
src/cpp_api/renderer/: renderer.h  renderer2d.cpp  renderer2d.h
src/cpp_api/renderer/texture/: texture2d.cpp  texture2d.h
src/cpp_api/utils/: base_types.h  delegate.h  utility.h
src/cpp_api/utils/containers/: yia_hashmap.h  yia_list.h  yia_pair.h
src/cpp_api/utils/memory/: allocator.cpp  allocator.h  memory.h  memory_pool.cpp  memory_pool.h
src/cpp_api/utils/string/: yia_string.cpp  yia_string.h  yia_string_view.cpp  yia_string_view.h
src/cpp_api/window/: window.cpp  window.h
src/devui/: devui.cpp  devui.h
src/event/: event.cpp  event.h  event_abstract.h  event_adapter.h  event_bus.h  event_listener.h  event_manager.cpp  event_manager.h  keycode.h  mouse_button.h
src/input/: input.cpp  input.h  scancode.h
src/math/: math.h
src/renderer/: render_color.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h
src/renderer/texture/: texture2d.cpp  texture2d.h
src/utils/: delegate.h  handle.h  hash_key.h  singleton.h  utility.h
src/utils/containers/: yia_array.h  yia_hashmap.h  yia_list.h  yia_pair.h
src/utils/memory/: allocator.cpp  allocator.h  mem_pool.cpp  mem_pool.h  memory.h  memory_pool.h
src/utils/string/: yia_string.cpp  yia_string.h  yia_string_view.cpp  yia_string_view.h
src/window/: window.cpp  window.h  window_config.h  window_manager.cpp  window_manager.h
